# ipasigner

./: .clang-format  CMakeLists.txt  Configuration.cpp  Configuration.hpp  Logger.tpp  README.md  ScopeGuard.hpp  SignAsset.hpp  SignInfo.hpp  arguments.cpp  arguments.hpp  common.cpp  common.hpp  compress.cpp  compress.hpp  config.yml  constants.cpp  constants.hpp  crypto.cpp  crypto.hpp  do_sign.cpp  do_sign.hpp  macho.hpp  main.cpp  plist.cpp  plist.hpp  signing.cpp  signing.hpp  test_plist.cpp  version.cpp  version.hpp
cmakes/: linux.cmake  windows.cmake
cmakes/linux/: argparse.cmake  bzip2.cmake  libzip.cmake  libzip_zlib_patch.cmake  openssl.cmake  pugixml.cmake  xz.cmake  yaml-cpp.cmake  zlib.cmake  zstd.cmake
cmakes/windows/: argparse.cmake  bzip2.cmake  libzip.cmake  openssl.cmake  pugixml.cmake  xz.cmake  yaml-cpp.cmake  zlib.cmake  zstd.cmake
